# ds18b20_CAN_UART_ARINC429

./: README.md  makefile  readme-ds18b20-controller-1921вк035 (1).md
ARM/: blinky.uvguix.skhar  blinky.uvoptx  blinky.uvprojx
GCC/: CMakeLists.txt  build_debug.bat
IAR/: blinky.ewd  blinky.ewp
app/: arinc429.c  arinc429.h  button.c  button.h  can.c  can.h  ds18b20.c  ds18b20.h  led.c  led.h  main.c  main.h  system_K1921VK035.c  uart.c  uart.h
